--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ Django==3.2.16
 django-bootstrap5==22.2
 Faker==12.0.1
 flake8==5.0.4
+flake8-docstrings==1.7.0
 iniconfig==2.0.0
 mccabe==0.7.0
 mixer==7.2.2
 packaging==23.0
+pep8-naming==0.13.3
 Pillow==9.3.0
 pluggy==1.0.0
 py==1.11.0
